Fixed templates and post build actions

--- a/internal/templates/go_main.tmpl
+++ b/internal/templates/go_main.tmpl
@@ -5,9 +5,9 @@ import (
 	"log"
 	"os"
 
-	"{{.App.Repository}}/todoapp/internal/database"
-	"{{.App.Repository}}/todoapp/internal/errors"
-	"{{.App.Repository}}/todoapp/internal/router"
+	"{{.App.Repository}}/internal/database"
+	"{{.App.Repository}}/internal/errors"
+	"{{.App.Repository}}/internal/router"
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/logger"
 	"github.com/gofiber/fiber/v2/middleware/recover"
