--- a/internal/templates/go_mongodb_router.tmpl
+++ b/internal/templates/go_mongodb_router.tmpl
@@ -3,10 +3,12 @@ package router
 import (
 	"{{.App.Repository}}/internal/auth"
 	"{{.App.Repository}}/internal/healthcheck"
-{{range .App.Entities
-}}    "{{$.App.Repository}}/internal/{{.Name}}"
-{{end
-}}    "github.com/gofiber/fiber/v2"
+{{range .App.Entities}}
+{{if hasController .Name}}
+	"{{$.App.Repository}}/internal/{{.Name}}"
+{{end}}
+{{end}}
+    "github.com/gofiber/fiber/v2"
 	"go.mongodb.org/mongo-driver/mongo"
 )
 
