--- a/internal/templates/go_auth_controller.tmpl
+++ b/internal/templates/go_auth_controller.tmpl
@@ -9,9 +9,15 @@ import (
 	"github.com/golang-jwt/jwt"
 )
 
+type SignInParams struct {
+	Email    string `json:"email" bson:"email,omitempty"`
+	Password string `json:"password" bson:"-"`
+}
+
 type Controller interface {
 	SignIn(*fiber.Ctx) error
 	SignOut(*fiber.Ctx) error
+	Me(*fiber.Ctx) error
 }
 
 type controller struct {
@@ -19,14 +25,16 @@ type controller struct {
 }
 
 func (c *controller) SignIn(ctx *fiber.Ctx) error {
-	var params {{.App.Authentication.Entity}}.GetOneParams
+	var params SignInParams
 	err := ctx.BodyParser(&params)
 
 	if err != nil {
 		return err
 	}
 
-	result, err := c.{{.App.Authentication.Entity}}Service.GetOne(&params)
+	result, err := c.{{.App.Authentication.Entity}}Service.GetOne(&{{.App.Authentication.Entity}}.GetOneParams{
+		Email: params.Email,
+	})
 
 	if err != nil {
 		return err
@@ -59,6 +67,24 @@ func (c *controller) SignIn(ctx *fiber.Ctx) error {
 
 func (c *controller) SignOut(ctx *fiber.Ctx) error {
 	return fiber.ErrNotImplemented
+}
+
+func (c *controller) Me(ctx *fiber.Ctx) error {
+	params := {{.App.Authentication.Entity}}.GetOneParams{
+		ID: ctx.Locals("{{.App.Authentication.Entity}}Id").(string),
+	}
+
+	{{.App.Authentication.Entity}}, err := c.{{.App.Authentication.Entity}}Service.GetOne(&params)
+
+	if err != nil {
+		return err
+	}
+
+	if user == nil {
+		return fiber.ErrNotFound
+	}
+
+	return ctx.JSON({{.App.Authentication.Entity}})
 }
 
 func NewController({{.App.Authentication.Entity}}Service {{.App.Authentication.Entity}}.Service) Controller {
