--- a/internal/templates/go_mongodb_router.tmpl
+++ b/internal/templates/go_mongodb_router.tmpl
@@ -4,7 +4,7 @@ import (
 {{if hasAuthentication}}
 	"{{.App.Repository}}/internal/auth"
 {{end}}
-	"{{.App.Repository}}/internal/healthcheck"
+	"{{.App.Repository}}/internal/health"
 {{range .App.Entities}}
 {{if hasController .}}
 	"{{$.App.Repository}}/internal/{{.Name}}"
@@ -15,7 +15,7 @@ import (
 )
 
 func Router(app *fiber.App, client *mongo.Client) {
-	hc := healthcheck.NewController()
+	hc := health.NewController()
 {{range .App.Entities}}
 {{if hasController .}}
 {{if (eq .Name $.App.Authentication.Entity)}}
@@ -40,8 +40,8 @@ func Router(app *fiber.App, client *mongo.Client) {
 	)
 {{end}}
 {{end}}
+	app.Get("/health", hc.Get)
 	v1 := app.Group("/v1")
-	v1.Get("/", hc.Get)
 {{range .App.Entities}}
 {{if hasController .}}
 {{$group := camelize .Name "grp"}}{{$controller := camelize .Name "controller"}}
