--- a/internal/templates/go_mongodb_entity.tmpl
+++ b/internal/templates/go_mongodb_entity.tmpl
@@ -6,10 +6,10 @@ type {{capitalize .Entity.Name}} struct {
 {{range .Entity.Fields}}
 	{{capitalize .Name}} {{.Type}} `json:"{{.Name}}" bson:"{{.Name}}" validate:"{{buildValidations .}}"`
 {{end}}
-{{range getNestedEntities $.Entity}}
+{{range $.Entity.GetNestedEntities}}
 	{{pluralize (capitalize .Name)}} []*{{capitalize .Name}} `json:"{{pluralize .Name}}" bson:"{{pluralize .Name}}" validate:"dive"`
 {{end}}
-{{if belongsToAuthenticatedEntity $.Entity.Name}}
+{{if $.Entity.BelongsToAuthenticatedEntity}}
 	UserID     string `json:"-" bson:"userId"`
 {{end}}
 {{if .Entity.Timestamps}}
@@ -19,7 +19,7 @@ type {{capitalize .Entity.Name}} struct {
 
 func New{{capitalize .Entity.Name}}() {{capitalize .Entity.Name}} {
 	return {{capitalize .Entity.Name}}{
-{{range getNestedEntities $.Entity}}
+{{range $.Entity.GetNestedEntities}}
 		{{pluralize (capitalize .Name)}}: make([]*{{capitalize .Name}}, 0), // Default value of empty array
 {{end}}
 	}
