--- a/internal/templates/go_main.tmpl
+++ b/internal/templates/go_main.tmpl
@@ -16,15 +16,9 @@ import (
 
 type Terminate func()
 
-func Setup() (*fiber.App, Terminate) {
-	err := godotenv.Load()
-
-	if err != nil {
-		panic(err)
-	}
-
+func setup() (*fiber.App, Terminate) {
 	ctx, client := database.Connect()
-	log.Default().Println("successfully connected to database")
+	log.Println("successfully connected to database")
 
 	app := fiber.New(fiber.Config{
 		ErrorHandler:          errors.Handler,
@@ -43,12 +37,17 @@ func Setup() (*fiber.App, Terminate) {
 }
 
 func main() {
-	app, terminate := Setup()
+	err := godotenv.Load()
 
+	if err != nil {
+		panic(err)
+	}
+
+	app, terminate := setup()
 	defer terminate()
 
 	log.Default().Printf("listening on port %s\n", os.Getenv("PORT"))
-	err := app.Listen(fmt.Sprintf("%s:%s", os.Getenv("HOST"), os.Getenv("PORT")))
+	err = app.Listen(fmt.Sprintf("%s:%s", os.Getenv("HOST"), os.Getenv("PORT")))
 
 	if err != nil {
 		panic(err)
