--- a/internal/templates/go_mongodb_database.tmpl
+++ b/internal/templates/go_mongodb_database.tmpl
@@ -11,7 +11,7 @@ import (
 
 func Connect() (context.Context, *mongo.Client) {
 	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
-	client, err := mongo.Connect(ctx, options.Client().ApplyURI(os.Getenv("DATABASE_URL")))
+	client, err := mongo.Connect(ctx, options.Client().ApplyURI(os.Getenv("DB_URL")))
 
 	defer cancel()
 
