Created new examples and fixed controllers

--- a/internal/templates/go_controller.tmpl
+++ b/internal/templates/go_controller.tmpl
@@ -40,7 +40,7 @@ func (c *controller) Create(ctx *fiber.Ctx) error {
 	if err != nil {
 		return err
 	}
-{{if $.Entity.BelongsToAuthenticatedEntity}}
+{{if and $.Entity.BelongsToAuthenticatedEntity .Authenticated}}
 	{{$.Entity.Name}}.{{capitalize $.Definitions.App.Authentication.Entity}}ID = ctx.Locals("{{$.Definitions.App.Authentication.Entity}}Id").(string)
 {{end}}
 	err = validator.Validate(&{{$.Entity.Name}})
@@ -81,7 +81,7 @@ func (c *controller) Create(ctx *fiber.Ctx) error {
 func (c *controller) GetOne(ctx *fiber.Ctx) error {
 	params := GetOneParams{
 		ID: ctx.Params("id"),
-{{if $.Entity.BelongsToAuthenticatedEntity}}
+{{if and $.Entity.BelongsToAuthenticatedEntity .Authenticated}}
 		{{capitalize $.Definitions.App.Authentication.Entity}}ID: ctx.Locals("{{$.Definitions.App.Authentication.Entity}}Id").(string),
 {{end}}
 	}
@@ -111,7 +111,7 @@ func (c *controller) GetAll(ctx *fiber.Ctx) error {
 		return err
 	}
 
-{{if $.Entity.BelongsToAuthenticatedEntity}}
+{{if and $.Entity.BelongsToAuthenticatedEntity .Authenticated}}
 	params.{{capitalize $.Definitions.App.Authentication.Entity}}ID = ctx.Locals("{{$.Definitions.App.Authentication.Entity}}Id").(string)
 {{end}}
 
@@ -134,7 +134,7 @@ func (c *controller) Update(ctx *fiber.Ctx) error {
 		return err
 	}
 
-{{if $.Entity.BelongsToAuthenticatedEntity}}
+{{if and $.Entity.BelongsToAuthenticatedEntity .Authenticated}}
 	{{$.Entity.Name}}.{{capitalize $.Definitions.App.Authentication.Entity}}ID = ctx.Locals("{{$.Definitions.App.Authentication.Entity}}Id").(string)
 {{end}}
 
@@ -160,7 +160,7 @@ func (c *controller) Update(ctx *fiber.Ctx) error {
 func (c *controller) Delete(ctx *fiber.Ctx) error {
 	params := GetOneParams{
 		ID: ctx.Params("id"),
-{{if $.Entity.BelongsToAuthenticatedEntity}}
+{{if and $.Entity.BelongsToAuthenticatedEntity .Authenticated}}
 		{{capitalize $.Definitions.App.Authentication.Entity}}ID: ctx.Locals("{{$.Definitions.App.Authentication.Entity}}Id").(string),
 {{end}}
 	}
