--- a/internal/templates/go_main_test.tmpl
+++ b/internal/templates/go_main_test.tmpl
@@ -13,7 +13,7 @@ import (
 	"os"
 	"testing"
 
-	"github.com/danilo-medeiros/todoapp/internal/database"
+	"{{.App.Repository}}/internal/database"
 	"github.com/gofiber/fiber/v2"
 	"github.com/joho/godotenv"
 	"github.com/stretchr/testify/assert"
