--- a/internal/templates/go_mongodb_env_test.tmpl
+++ b/internal/templates/go_mongodb_env_test.tmpl
@@ -1,5 +1,5 @@
 DB_URL="mongodb://localhost:27017"
-DB_NAME="todoapp_test"
+DB_NAME="{{.App.Name}}_test"
 PORT=3001
 HOST="localhost"
 TOKEN_SECRET="aJix6!UqQv&!&eNOYrf"
