--- a/internal/templates/go_mongodb_env.tmpl
+++ b/internal/templates/go_mongodb_env.tmpl
@@ -1,4 +1,5 @@
-DATABASE_URL="mongodb://localhost:27017"
+DB_URL="mongodb://localhost:27017"
+DB_NAME="{{.App.Name}}"
 PORT=3001
 HOST="localhost"
 TOKEN_SECRET="aJix6!UqQv&!&eNOYrf"
